@@ -6,6 +6,9 @@
    (#255)
  - Fix infinite loop during parsing of xsd.Sequence where max_occurs is 
    unbounded (#256)
+ - Make the xsd.Element name kwarg required
+ - Improve handling of the xsd:anyType element when passed instances of 
+   complexType's (#252)
 
 
 0.23.0 (2016-11-24)
